--- a/requirements.txt
+++ b/requirements.txt
@@ -1,160 +1,7 @@
-amqp==5.3.1
-anyio==4.6.2.post1
-argcomplete==3.5.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asgiref==3.8.1
-asttokens==2.4.1
-async-lru==2.0.4
-attrs==24.2.0
-Automat==20.2.0
-babel==2.16.0
-bcrypt==3.2.0
 beautifulsoup4==4.12.3
-bidict==0.23.1
-billiard==4.2.1
-bleach==6.1.0
-blinker==1.4
-Brotli==1.1.0
-casadi==3.6.7
-catkin-pkg==1.0.0
 celery==5.4.0
-certifi==2024.8.30
-cffi==1.17.1
-chardet==4.0.0
-charset-normalizer==3.4.0
-click==8.1.7
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-colorama==0.4.4
-comm==0.2.2
 Django==5.1.3
-django-allauth==65.2.0
-django-js-reverse==0.10.2
-docutils==0.21.2
-empy==3.3.4
-exceptiongroup==1.2.2
-executing==2.1.0
-fastjsonschema==2.20.0
-filelock==3.16.1
-Flask==0.12.5
-fonttools==4.54.1
-fqdn==1.5.1
-greenlet==3.1.1
-httpcore==1.0.6
-httplib2==0.20.2
-httpx==0.27.2
-hyperlink==21.0.0
-idna==3.10
-importlib-metadata==4.6.4
-jedi==0.19.1
-jeepney==0.7.1
-Jinja2==3.1.4
-joblib==1.4.2
-json5==0.9.25
-jsonpatch==1.32
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-lxml==5.3.0
-MarkupSafe==3.0.1
-mysql-connector-python==8.0.33
-mysqlclient==2.2.6
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-netifaces==0.11.0
-numpy==1.22.4
-oauthlib==3.2.0
-overrides==7.7.0
-packaging==24.1
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
-pillow==10.4.0
-pipenv==2024.4.0
-platformdirs==4.3.6
-pluggy==1.5.0
-prometheus_client==0.21.0
-prompt_toolkit==3.0.48
-protobuf==3.20.3
-psutil==6.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.1
-pycparser==2.22
-pycurl==7.44.1
-pygdbmi==0.8.4.0
-Pygments==2.18.0
-PyGObject==3.42.1
-PyHamcrest==2.0.2
-PyJWT==2.3.0
+mysql_connector_repackaged==0.3.1
 PyMySQL==1.1.1
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyrsistent==0.18.1
-pyserial==3.5
-pytest==8.3.2
-pytest-cov==5.0.0
-pytest-repeat==0.9.3
-pytest-rerunfailures==14.0
-python-apt==2.4.0+ubuntu4
-python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-python-engineio==4.10.1
-python-json-logger==2.0.7
-python-socketio==5.11.4
-pytz==2022.1
-PyYAML==5.4.1
-pyzmq==26.2.0
-quadprog==0.1.12
-referencing==0.35.1
-requests==2.32.3
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.20.0
-scikit-learn==1.5.2
-scipy==1.14.1
-SecretStorage==3.3.1
-Send2Trash==1.8.3
-service-identity==18.1.0
-simple-websocket==1.1.0
-six==1.16.0
-sniffio==1.3.1
-soupsieve==2.6
-sqlparse==0.5.2
-stack-data==0.6.3
-systemd-python==234
-terminado==0.18.1
-threadpoolctl==3.5.0
-tinycss2==1.3.0
-tomli==2.0.1
-tornado==6.4.1
-traitlets==5.14.3
-trajectory-planning-helpers==0.79
-Twisted==22.1.0
-types-python-dateutil==2.9.0.20241003
-typing_extensions==4.12.2
-tzdata==2024.2
-ubuntu-pro-client==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-uri-template==1.3.0
-urllib3==2.2.3
-vine==5.1.0
-virtualenv==20.27.1
-wadllib==1.3.6
-wcwidth==0.2.13
-webcolors==24.8.0
-webencodings==0.5.1
-websocket-client==1.8.0
-Werkzeug==0.16.1
-widgetsnbextension==4.0.13
-wsproto==1.2.0
-zipp==1.0.0
-zope.interface==5.4.0
-zstandard==0.23.0
+Requests==2.32.3
