--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ mysql_connector_repackaged==0.3.1
 PyMySQL==1.1.1
 python-dotenv==1.0.1
 Requests==2.32.3
+mysql-connector-python==8.0.33
+mysqlclient==2.2.6
