--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ celery==5.4.0
 Django==5.1.3
 django-allauth==65.2.0
 django-js-reverse==0.10.2
+django-cors-headers==4.6.0
+django-environ==0.11.2
 mysql_connector_repackaged==0.3.1
 PyMySQL==1.1.1
 python-dotenv==1.0.1
