--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,15 @@
-mysql-connector-python>=8.0.32, <8.1.0
-python-dotenv>=1.0.0, < 1.1.0
+beautifulsoup4==4.12.3
+celery==5.4.0
+Django==5.1.3
+django-allauth==65.2.0
+django-js-reverse==0.10.2
+django-cors-headers==4.6.0
+django-environ==0.11.2
+mysql_connector_repackaged==0.3.1
+PyMySQL==1.1.1
+python-dotenv==1.0.1
+Requests==2.32.3
+mysql-connector-python==8.0.33
+mysqlclient==2.2.6
+lxml==5.3.0
+requests==2.32.3
